quick fix for overflow scroll on mobile

--- a/src/styles/components/_highlight.scss
+++ b/src/styles/components/_highlight.scss
@@ -5,7 +5,8 @@
   padding: 0 0.2rem;
   transition: color 0.2s 1s;
   border-radius: 5px;
-
+  box-decoration-break: clone;
+  
   &::before {
     content: '';
     position: absolute;
@@ -17,7 +18,11 @@
     border-radius: 5px;
     z-index: -1;
     background-image: linear-gradient(to right, rgba(251, 113, 88, 0.4), rgba(244, 200, 98, 0.8));
-    transition: left 0.6s 0.8s cubic-bezier(.9,.84,.22,1), transform 1.6s 0.8s;
+    opacity: 0;
+    transition:
+      opacity 0.5s 0.5s,
+      left 0.6s 0.8s cubic-bezier(.9,.84,.22,1),
+      transform 1.6s 0.8s;
   }
 
   &--visible-1::before,
@@ -25,6 +30,7 @@
   &--visible-3::before,
   &--visible-4::before {
     left: 0;
+    opacity: 1;
   }
   
   &--visible-1::before {
